# sudoku-solver-in-rust

./: Cargo.toml  LICENSE  README.md
src/: board.rs  main.rs  solver.rs
