[package]
name = "sudoku-solver-in-rust"
version = "1.0.0"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2018"
description = "A simple sudoku solver"
homepage = "https://github.com/magicant/sudoku-solver-in-rust"
repository = "https://github.com/magicant/sudoku-solver-in-rust"
license = "MIT"
keywords = ["sudoku"]
categories = ["command-line-utilities", "games"]

[dependencies]
